models added on

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 
 <body ng-app="toDoApp">
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper teal">
             <a href="#!" class="brand-logo right">AngularJS App for Errands</a>
             <ul class="left hide-on-med-and-down">
                 <li><a ui-sref="create">Create An Errand</a></li>
@@ -40,7 +40,7 @@
     </ui-view>
 
 
-    <footer class="page-footer">
+    <footer class="page-footer teal">
         <div class="footer-copyright">
             <div class="container">
                 © 2017 Copyright Troll
@@ -56,7 +56,7 @@
 
     <script src="toDoApp/features/create/create.module.js"></script>
     <script src="toDoApp/features/create/create.controller.js"></script>
-    <script src="todoApp/features/create/create.route.js"></script>
+    <script src="toDoApp/features/create/create.route.js"></script>
 
     <script src="toDoApp/features/complete/complete.module.js"></script>
     <script src="toDoApp/features/complete/complete.controller.js"></script>
