--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,11 @@
 </head>
     <style>
         body{
-            background: blue;
+            background: teal;
+        }
+        li{
+            color: red;
+            text-decoration: underline;
         }
 
     </style>
